fix: display board members on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1335,10 +1335,6 @@ body {
 		display: block;
 	}
 	
-	.boardship-2 {
-		display: none;
-	}
-	
 	.board-name {
 		font-size: 18px;
 	}
